--- a/app/css/components/craving-stats.css
+++ b/app/css/components/craving-stats.css
@@ -88,7 +88,8 @@
 }
 
 #cravingChart {
-    max-height: 300px;
+    height: 300px;
+    min-height: 300px;
     margin-bottom: 1.5rem;
 }
 
